--- a/HTH2015/app/src/main/res/values/strings.xml
+++ b/HTH2015/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">HTH2015</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">DataTrac</string>
     <string name="action_settings">Settings</string>
 
 </resources>
